--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <!-- Team 1 -->
                     <div class="flex items-center space-x-4">
                         <div>
-                            <div id="team1-name" onclick="editTeamName('team1')" class="text-kick-green text-sm font-bold cursor-pointer hover:text-white transition-colors text-center">MOMBASA</div>
+                            <div id="team1-name" onclick="editTeamName('team1')" class="text-kick-green text-sm font-bold cursor-pointer hover:text-white transition-colors text-center">MAGHETTOS</div>
                         </div>
                     </div>
 
@@ -75,7 +75,7 @@
                     <!-- Team 2 -->
                     <div class="flex items-center space-x-4">
                         <div>
-                            <div id="team2-name" onclick="editTeamName('team2')" class="text-kick-green text-sm font-bold cursor-pointer hover:text-white transition-colors text-center">MATATA</div>
+                            <div id="team2-name" onclick="editTeamName('team2')" class="text-kick-green text-sm font-bold cursor-pointer hover:text-white transition-colors text-center">KAA Chonjoo</div>
                         </div>
                     </div>
                 </div>
@@ -256,8 +256,8 @@
 
     <script>
         let gameStats = {
-            team1Name: 'MOMBASA',
-            team2Name: 'MATATA',
+            team1Name: 'MAGHETTOS',
+            team2Name: 'KAA Chonjoo',
             team1Score: 0,
             team2Score: 0,
             matchStatus: 'FULL TIME',
@@ -427,8 +427,8 @@
 
         function resetStats() {
             gameStats = {
-                team1Name: 'MOMBASA',
-                team2Name: 'MATATA',
+                team1Name: 'MAGHETTOS',
+                team2Name: 'KAA Chonjoo',
                 team1Score: 0,
                 team2Score: 0,
                 matchStatus: 'FULL TIME',
